~ renamed some stuff to be project-appropriate

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>kaleidoscope</title>
+<title>flower display</title>
 
 <!--
 <audio ontimeupdate="onTimeUpdate(event)">
@@ -20,7 +20,7 @@
 <script src="js/lib/jquery-1.10.2.min.js"></script>
 <script src="js/util/Colors.js"></script>
 <script src="js/Petal.js"></script>
-<script src="js/kaleidoscope.js"></script>
+<script src="js/Flower.js"></script>
 
 
 <script>
