--- a/index.html
+++ b/index.html
@@ -21,20 +21,11 @@
 <script src="js/util/Colors.js"></script>
 <script src="js/Petal.js"></script>
 <script src="js/Flower.js"></script>
-
-
-<script>
-
-    
-
-    function init(){
-        //hammerInit();
-    }
-</script>
+<script src="js/main.js"></script>
 
 </head>
 <!--<body onload="init();" style="background-color:#D4D4D4; text-align:center">-->
-<body onload="init();" style="background-color:#747474; text-align:center">
+<body style="background-color:#747474; text-align:center">
 
     <div id="kalDisplay">
             <canvas id="kalCanvas" width="1920" height="1080" style="background-color:#000000;padding:0;margin:0;" ></canvas>
