~ added a third-party bezier tool by Pomax (Mike Kamermans).  Haven't figured out how to use it yet!  But it looks like it could be super useful.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="js/createjs/tweenjs-0.5.0.min.js"></script>
 <script src="js/lib/jquery-1.10.2.min.js"></script>
 <script src="js/util/Colors.js"></script>
+<script src="js/pomax/bezier.js"></script>
 <script src="js/Petal.js"></script>
 <script src="js/Flower.js"></script>
 <script src="js/main.js"></script>
